leptos-fluent-macros/tests/ui/leptos_fluent/fail/invalid_str_as_litbool.stderr
error: Invalid value for 'url_param' of leptos_fluent! macro. Must be a literal string or a valid expression. Found a literal boolean 'true'.
  --> tests/ui/leptos_fluent/fail/invalid_str_as_litbool.rs:17:24
   |
17 |         url_param: true,
   |                        ^
